# glade

./: .gitignore  README.md  clippy.sh  glade.sh  test.sh
.github/workflows/: ci.yml  release.yml
notebooks/: 1_download.ipynb  2_check_positions.ipynb  3_clinvar_filter.ipynb  4_dbsnp.ipynb  jupyter.sh
notebooks/results/: clinvar.23andme.vcf.gz.md5  clinvar.23andme.vcf.gz.tbi
rust/: Cargo.toml  clippy.sh
rust/src/: config.rs  database.rs  databases.yaml  downloader.rs  error.rs  lib.rs  main.rs
