[package]
name = "glade"
version = "0.1.0"
edition = "2021"

[lib]
name = "glade"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "glade"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.39", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
indicatif = "0.17"
dirs = "5.0"
chrono = "0.4"
md5 = "0.7"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.aarch64-apple-ios]
crate-type = ["staticlib", "cdylib"]

[target.x86_64-apple-ios]
crate-type = ["staticlib", "cdylib"]

[profile.release]
opt-level = "s"
lto = true
strip = true
